# FIFA-2026-prediction-4.0

./: README.md  design-qa.md  pyproject.toml  render.yaml
backend/: player_level_simulator.py
backend/alembic/versions/: 20260625_0002_raw_snapshots.py
backend/app/: analytics.py  archive.py  bracket.py  config.py  engine.py  fotmob.py  jobs.py  main.py  market.py  models.py  services.py
backend/tests/: test_bracket_data_flow.py  test_championship_explanations.py  test_engine.py  test_market_snapshot_lock.py  test_simulation_reuse.py  test_snapshot_archive.py  test_sync_resilience.py
frontend/: index.html  vite.config.js
frontend/src/: App.jsx  App.test.jsx  api.js  index.css  match_analyses.json  real_games_results.json  simulation_probabilities.json
frontend/src/components/: ChampionshipOdds.jsx  ChampionshipOdds.test.jsx  Modals.jsx  Modals.test.jsx  ModelPerformance.jsx  ModelPerformance.test.jsx  NextMatchPredictor.jsx  NextMatchPredictor.test.jsx  TournamentBracket.jsx
