[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fifa-2026-predictor"
version = "4.0.0"
description = "FIFA 2026 prediction engine and FastAPI service"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pydantic>=2.10,<3",
  "psycopg2-binary>=2.9,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "backend/archive",
  "backend/scratch",
  "backend/generate_frontend_data.py",
  "backend/optimize_c1_c2.py",
  "backend/player_level_simulator.py",
  "backend/sync_real_games.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]
